/**
 *
 * Please note:
 * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
 * Do not edit this file manually.
 *
 */

@file:Suppress(
  "ArrayInDataClass",
  "DuplicatedCode",
  "EnumEntryName",
  "RemoveRedundantQualifierName",
  "RemoveRedundantCallsOfConversionMethods",
  "REDUNDANT_CALL_OF_CONVERSION_METHOD",
  "RedundantUnitReturnType",
  "RemoveEmptyClassBody",
  "UnnecessaryVariable",
  "UnusedImport",
  "UnnecessaryVariable",
  "unused",
  "ProtectedInFinal",
  "AddExplicitTargetToParameterAnnotation",
)
package remote.apis

import remote.infrastructure.CollectionFormats.*
import retrofit2.http.*
import retrofit2.Response
import okhttp3.RequestBody
import com.squareup.moshi.Json

import remote.models.Yweet

interface TimelinesApi {
    /**
     * GET timelines/home
     * Retrieving a timeline
     * 
     * Responses:
     *  - 200: OK
     *  - 400: Bad Request
     *  - 500: Internal Server Error
     *
     * @param onlyImage Only return yweets that have image attachments (public and tag timelines only) (optional)
     * @param offset 0-indexed offset of the first yweet to return (optional)
     * @param limit Maximum number of followings to get (Default 40, Max 80) (optional)
     * @return [kotlin.collections.List<Yweet>]
     */
    @GET("timelines/home")
    suspend fun findHomeTimelines(@Query("only_image") onlyImage: kotlin.Boolean? = null, @Query("offset") offset: kotlin.Int? = null, @Query("limit") limit: kotlin.Int? = null): Response<kotlin.collections.List<Yweet>>

    /**
     * GET timelines/public
     * Retrieving a timeline
     * 
     * Responses:
     *  - 200: OK
     *  - 400: Bad Request
     *  - 500: Internal Server Error
     *
     * @param onlyImage Only return yweets that have image attachments (public and tag timelines only) (optional)
     * @param offset 0-indexed offset of the first yweet to return (optional)
     * @param limit Maximum number of followings to get (Default 40, Max 80) (optional)
     * @return [kotlin.collections.List<Yweet>]
     */
    @GET("timelines/public")
    suspend fun findPublicTimelines(@Query("only_image") onlyImage: kotlin.Boolean? = null, @Query("offset") offset: kotlin.Int? = null, @Query("limit") limit: kotlin.Int? = null): Response<kotlin.collections.List<Yweet>>

}
