package com.dmm.bootcamp.yatter.domain.model

import com.dmm.bootcamp.yatter.common.ddd.Identifier

class ImageId(value: String) : Identifier<String>(value)
